# xinyi-platform

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.migrate.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
docs/: local-smoke-test.md  security-todos.md
tests/: conftest.py  test_integration_full.py  test_migrations.py  test_smoke.py  test_startup.py  test_ui_install.py  test_ui_integration.py
tests/api/: conftest.py  test_admin_audit_logs_api.py  test_admin_clients_api.py  test_admin_login_history_api.py  test_admin_users_api.py  test_cas_api.py  test_csrf_integration.py  test_dependencies.py  test_internal_audit_api.py  test_internal_check_revocation_api.py  test_internal_clients_api.py  test_internal_email_api.py  test_internal_users_api.py  test_login.py  test_login_api.py  test_logout_api.py  test_me_api.py  test_oauth_authorize.py  test_oauth_revoke.py  test_oauth_token.py  test_password_api.py  test_register_api.py
tests/auth/: test_audit.py
tests/services/: test_audit_service.py  test_business_client_service.py  test_email_service.py  test_oauth_service.py  test_user_service.py
tests/unit/: test_business_client_service.py  test_csrf.py  test_internal_auth.py  test_jwt.py  test_oauth_state.py  test_password.py  test_service_discovery.py  test_sm4.py  test_user_model.py  test_xss_guards.py
xinyi_platform/: base.py  config.py  crypto.py  db.py  jinja_env.py  main.py  startup.py
xinyi_platform/api/: _shared.py  admin_audit.py  admin_clients.py  admin_login_history.py  admin_users.py  cas.py  login.py  (+7 more)
(+69 files in other folders)
